update fr v2 css

--- a/fr v2/cv.html
+++ b/fr v2/cv.html
@@ -19,9 +19,7 @@
 </head>
 <body>
 <header>
-	<a title="Accueil" href="http://ehalter.com">
-				<img alt="Emmanuel Halter" src="images/title.png"/>
-	</a>
+	<a title="Accueil" href="http://ehalter.com"></a>
 	<nav>
 		<ul name="menu">
 			<li>
