--- a/fr v2/expériences.html
+++ b/fr v2/expériences.html
@@ -9,19 +9,23 @@
 		<title>
 			  Expériences | Emmanuel HALTER
 		</title>
-		<link rel="stylesheet" type="text/css" media="screen and (min-width: 1024px) and (max-width: 1500px)" href="css/default/experiences.css">
-		<link rel="stylesheet" type="text/css" media="screen and (min-width: 1500px) and (max-width: 2000px)" href="css/vhd/experiences.css">
-		<link rel="stylesheet" type="text/css" media="screen and (min-width: 768) and (max-width: 1024px)" href="css/middle/experiences.css">
-		<link rel="stylesheet" type="text/css" media="screen and (max-width: 480)" href="css/mobile/missions.css">
+		<link rel="stylesheet" type="text/css" media="screen and (min-width: 1024px) and (max-width: 1799px)" href="css/default/experiences.css">
+		<link rel="stylesheet" type="text/css" media="screen and (min-width: 1024px) and (max-width: 1799px)" href="css/default/header_footer.css">
+		<link rel="stylesheet" type="text/css" media="only screen and (min-width: 1800px)" href="css/vhd/experiences.css">
+		<link rel="stylesheet" type="text/css" media="only screen and (min-width: 769px) and (max-width: 1024px)" href="css/middle/experiences.css">
+		<link rel="stylesheet" type="text/css" media="only screen and (min-device-width: 481px) and (max-device-width: 768px)" href="css/mobile_bis/experiences.css">
+		<link rel="stylesheet" type="text/css" media="only screen and (max-device-width: 480px) and (-webkit-min-device-pixel-ratio: 2)" href="css/mobile/experiences.css">
+		<!--[if (lt IE 9)&(!IEMobile)]>
+			<link rel="stylesheet" type="text/css" media="screen and (min-width: 1024px) and (max-width: 1799px)" href="css/default/experiences.css" media="all">
+			<link rel="stylesheet" type="text/css" media="only screen and (min-width: 1800px)" href="css/vhd/experiences.css" media="all">
+		<![endif]-->
 		
 		<link rel="icon" type="image/png" href="icon/favicon.png" />
 		<!--[if IE]><link rel="shortcut icon" type="image/png" href="icon/favicon.png" /><![endif]-->
 </head>
 <body>
 <header>
-	<a title="Accueil" href="http://ehalter.com">
-				<img alt="Emmanuel Halter" src="images/title.png"/>
-	</a>
+	<a title="Accueil" href="http://ehalter.com"></a>
 	<nav>
 		<ul name="menu">
 			<li>
@@ -89,8 +93,11 @@
 					<li>Habilité à communiquer et écouter pour recueillir les besoins des clients</li>
 					<li>Capacité à animer des séances avec différents interlocuteurs</li>
 					<li>Modélisation de la solution avec UML / RSA / Aris </li>
-					<li>Implémentation du noyau du projet en JAVA / JPQL</li>
+					<li>Implémentation du noyau du projet en JAVA / JPQL / Servlet</li>
+					<li>Suivi de la gestion de planning et de la priorisation des tâches</li>
+					<li>Capacité à prioriser les problématiques métiers par rapport aux problématiques techniques</li>
 				</ul>
+				<p><i>Environnement : Framework DOJO, JAVA, JUnit, Scrum, Servlet, Bamboo, RSA, Aris, Eclipse, Confluence</i></p>
 			</article>
 			<canvas id="caSkills" width="600" height="300">[No canvas support]</canvas>
 	</section>
@@ -101,11 +108,13 @@
 				<h3>Février 2011 - Septembre 2011(7mois)</h3>
 				<p><strong>Mise en place d'une plateforme de gestion de projet</strong></p>
 				<ul>
-					<li>Développement du module de l'intégration continue avec JAVA / jQuery</li>
+					<li>Développement du module de l'intégration continue en JAVA / jQuery</li>
 					<li>Utilisation de Jenkins et son API</li>
-					<li>Tests des fonctionnalités avec JUnit et méthode TDD</li>
+					<li>Tests des fonctionnalités avec JUnit et méthodes TDD</li>
 					<li>Prendre conscience de l’amélioration continue à travers les méthodes agiles</li>
+					<li>Apprendre à créer/suivre un plan de recettage</li>
 				</ul>
+				<p><i>Environnement : J2E, Framework Spring 3 MVC, Hibernate, HTML, jQuery, Jenkins, Sonar, Mercurial, Eclipse, UML, Merise, Méthodes Agiles</i></p>
 			</article>
 			<canvas id="aKazanSkills" width="600" height="300">[No canvas support]</canvas>
 	</section>
@@ -118,8 +127,10 @@
 				<ul>
 					<li>Développement du module des statistiques avec JAVA / SQL</li>
 					<li>Utilisation de Jasper iReport et son API Java pour la création de graphiques des statistiques</li>
-					<li>Capacité à créer des spécifications techniques selon les documents fonctionnels.</li>
+					<li>Capacité à créer des spécifications techniques selon les documents fonctionnels</li>
+					<li>Création de batch pour récupérer les données quotidiennement nécessaire à l'alimentation des statistiques</li>
 				</ul>
+				<p><i>Environnement : Framework Tapestry, SQL, JUnit, iReports, Eclipse, UML, SVN, Méthodes Agiles</i></p>
 			</article>
 			<canvas id="aGedSkills" width="600" height="300">[No canvas support]</canvas>
 	</section>
