--- a/fr v2/contact.html
+++ b/fr v2/contact.html
@@ -11,19 +11,23 @@
 		</title>
 		<link rel="stylesheet" type="text/css" href="js/validationEngine/css/validationEngine.jquery.css"/>
 		
-		<link rel="stylesheet" type="text/css" media="screen and (min-width: 1024px) and (max-width: 1500px)" href="css/default/contact.css">
-		<link rel="stylesheet" type="text/css" media="screen and (min-width: 1500px) and (max-width: 2000px)" href="css/vhd/contact.css">
-		<link rel="stylesheet" type="text/css" media="screen and (min-width: 768) and (max-width: 1024px)" href="css/middle/contact.css">
-		<link rel="stylesheet" type="text/css" media="screen and (max-width: 480)" href="css/mobile/contact.css">
+		<link rel="stylesheet" type="text/css" media="screen and (min-width: 1024px) and (max-width: 1799px)" href="css/default/contact.css">
+		<link rel="stylesheet" type="text/css" media="screen and (min-width: 1024px) and (max-width: 1799px)" href="css/default/header_footer.css">
+		<link rel="stylesheet" type="text/css" media="only screen and (min-width: 1800px)" href="css/vhd/contact.css">
+		<link rel="stylesheet" type="text/css" media="only screen and (min-width: 769px) and (max-width: 1024px)" href="css/middle/contact.css">
+		<link rel="stylesheet" type="text/css" media="only screen and (min-device-width: 481px) and (max-device-width: 768px)" href="css/mobile_bis/contact.css">
+		<link rel="stylesheet" type="text/css" media="only screen and (max-device-width: 480px) and (-webkit-min-device-pixel-ratio: 2)" href="css/mobile/contact.css">
+		<!--[if (lt IE 9)&(!IEMobile)]>
+			<link rel="stylesheet" type="text/css" media="screen and (min-width: 1024px) and (max-width: 1799px)" href="css/default/contact.css" media="all">
+			<link rel="stylesheet" type="text/css" media="only screen and (min-width: 1800px)" href="css/vhd/contact.css" media="all">
+		<![endif]-->
 		
 		<link rel="icon" type="image/png" href="icon/favicon.png" />
 		<!--[if IE]><link rel="shortcut icon" type="image/png" href="icon/favicon.png" /><![endif]-->
 </head>
 <body>
 <header>
-	<a title="Accueil" href="http://ehalter.com">
-				<img alt="Emmanuel Halter" src="images/title.png"/>
-	</a>
+	<a title="Accueil" href="http://ehalter.com"></a>
 	<div>
 		<div name="quote">
 			<blockquote>
