update fr v2 all

--- a/fr v2/apports.html
+++ b/fr v2/apports.html
@@ -82,7 +82,7 @@
 	</div>		
 </header>
 <div class="content">
-	<img alt="apports" src="images/apportsTest.png"/>
+	<img alt="apports" src="images/apports.png"/>
 </div>
 <footer>
 		<section name="network">
