--- a/fr v2/index.html
+++ b/fr v2/index.html
@@ -6,16 +6,17 @@
 <html lang="fr">
 <head>
 		<meta content="text/html; charset=UTF-8" http-equiv="Content-Type"/>
-		<meta name=”viewport” content=”width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no” />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>
 			  Accueil | Emmanuel HALTER
 		</title>
-		<link rel="stylesheet" type="text/css" media="screen and (min-width: 1024px) and (max-width: 1799px)" href="css/default/accueil.css">
-		<link rel="stylesheet" type="text/css" media="screen and (min-width: 1024px) and (max-width: 1799px)" href="css/default/header_footer.css">
-		<link rel="stylesheet" type="text/css" media="only screen and (min-width: 1800px)" href="css/vhd/accueil.css">
-		<link rel="stylesheet" type="text/css" media="only screen and (min-width: 769px) and (max-width: 1024px)" href="css/middle/accueil.css">
-		<link rel="stylesheet" type="text/css" media="only screen and (min-device-width: 481px) and (max-device-width: 768px)" href="css/mobile_bis/accueil.css">
-		<link rel="stylesheet" type="text/css" media="only screen and (max-device-width: 480px) and (-webkit-min-device-pixel-ratio: 2)" href="css/mobile/accueil.css">
+		<link rel="stylesheet" type="text/css" media="screen and (min-width: 84.7em) and (max-width: 119.231em)" href="css/default/accueil.css" />
+		<link rel="stylesheet" type="text/css" media="screen and (min-width: 84.7em) and (max-width: 119.231em)" href="css/default/header_footer.css" />
+		<link rel="stylesheet" type="text/css" media="only screen and (min-width: 119.231em)" href="css/vhd/accueil.css" />
+		<link rel="stylesheet" type="text/css" media="only screen and (min-width: 59.077em) and (max-width: 84.7em)" href="css/middle/accueil.css" />
+		<link rel="stylesheet" type="text/css" media="only screen and (min-width: 37em) and (max-width: 59.077em)" href="css/mobile_high/accueil.css" />
+		<link rel="stylesheet" type="text/css" media="only screen and (min-width: 24.615em) and (max-width: 37em)" href="css/mobile_medium/accueil.css" />
+		<link rel="stylesheet" type="text/css" media="(max-width: 24.615em)" href="css/mobile_mini/accueil.css" />
 		<!--[if (lt IE 9)&(!IEMobile)]>
 			<link rel="stylesheet" type="text/css" media="screen and (min-width: 1024px) and (max-width: 1799px)" href="css/default/accueil_bis.css" media="all">
 			<link rel="stylesheet" type="text/css" media="only screen and (min-width: 1800px)" href="css/vhd/accueil_bis.css" media="all">
