update responsive design fr v2

--- a/fr v2/cv.html
+++ b/fr v2/cv.html
@@ -6,13 +6,35 @@
 <html lang="fr">
 <head>
 	<meta content="text/html; charset=UTF-8" http-equiv="Content-Type"/>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>
 			  CV | Emmanuel HALTER
 		</title>
-		<link rel="stylesheet" type="text/css" media="screen and (min-width: 1024px) and (max-width: 1500px)" href="css/default/cv.css">
-		<link rel="stylesheet" type="text/css" media="screen and (min-width: 1500px) and (max-width: 2000px)" href="css/vhd/cv.css">
-		<link rel="stylesheet" type="text/css" media="screen and (min-width: 768) and (max-width: 1024px)" href="css/middle/cv.css">
-		<link rel="stylesheet" type="text/css" media="screen and (max-width: 480)" href="css/mobile/cv.css">
+		<!-- Common Resolution -->
+		<link rel="stylesheet" type="text/css" media="screen and (min-width: 84.7em) and (max-width: 119.231em)" href="css/default/cv.css" />
+		<link rel="stylesheet" type="text/css" media="screen and (min-width: 84.7em) and (max-width: 119.231em)" href="css/default/header_footer.css" />
+		<!-- High Resolution -->
+		<link rel="stylesheet" type="text/css" media="only screen and (min-width: 119.231em)" href="css/vhd/cv.css" />
+		<link rel="stylesheet" type="text/css" media="only screen and (min-width: 119.231em)" href="css/vhd/header_footer.css" />
+		<!-- Low / Tablette Resolution -->
+		<link rel="stylesheet" type="text/css" media="only screen and (min-width: 62.077em) and (max-width: 84.7em)" href="css/middle/cv.css" />
+		<link rel="stylesheet" type="text/css" media="only screen and (min-width: 62.077em) and (max-width: 84.7em)" href="css/middle/header_footer.css" />
+		<!-- Mobile / Tablette Resolution --> 
+		<link rel="stylesheet" type="text/css" media="only screen and (min-width: 37em) and (max-width: 62.077em)" href="css/mobile_high/cv.css" />
+		<link rel="stylesheet" type="text/css" media="only screen and (min-width: 37em) and (max-width: 62.077em)" href="css/mobile_high/header_footer.css" />
+		<!-- iPhone / Mini Tablette Resolution -->
+		<link rel="stylesheet" type="text/css" media="only screen and (min-width: 24.615em) and (max-width: 37em)" href="css/mobile_medium/cv.css" />
+		<link rel="stylesheet" type="text/css" media="only screen and (min-width: 24.615em) and (max-width: 37em)" href="css/mobile_medium/header_footer.css" />
+		<!-- Old Mobile Resolution -->
+		<link rel="stylesheet" type="text/css" media="(max-width: 24.615em)" href="css/mobile_mini/cv.css" />
+		<link rel="stylesheet" type="text/css" media="(max-width: 24.615em)" href="css/mobile_mini/header_footer.css" />
+		
+		<!--[if (lt IE 9)&(!IEMobile)]>
+			<link rel="stylesheet" type="text/css" media="screen and (min-width: 84.7em) and (max-width: 119.231em)" href="css/default/cv.css" media="all">
+			<link rel="stylesheet" type="text/css" media="screen and (min-width: 84.7em) and (max-width: 119.231em)" href="css/default/header_footer.css" media="all">
+			<link rel="stylesheet" type="text/css" media="only screen and (min-width: 119.231em)" href="css/vhd/cv.css" media="all">
+			<link rel="stylesheet" type="text/css" media="only screen and (min-width: 119.231em)" href="css/vhd/header_footer.css" media="all">
+		<![endif]-->
 		
 		<link rel="icon" type="image/png" href="icon/favicon.png" />
 		<!--[if IE]><link rel="shortcut icon" type="image/png" href="icon/favicon.png" /><![endif]-->
