--- a/fr v2/amis.html
+++ b/fr v2/amis.html
@@ -5,19 +5,35 @@
 
 <html lang="fr">
 <head>
-	<meta content="text/html; charset=UTF-8" http-equiv="Content-Type"/>
+		<meta content="text/html; charset=UTF-8" http-equiv="Content-Type"/>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>
 			  Amis | Emmanuel HALTER
 		</title>
-		<link rel="stylesheet" type="text/css" media="screen and (min-width: 1024px) and (max-width: 1799px)" href="css/default/amis.css">
-		<link rel="stylesheet" type="text/css" media="screen and (min-width: 1024px) and (max-width: 1799px)" href="css/default/header_footer.css">
-		<link rel="stylesheet" type="text/css" media="only screen and (min-width: 1800px)" href="css/vhd/amis.css">
-		<link rel="stylesheet" type="text/css" media="only screen and (min-width: 769px) and (max-width: 1024px)" href="css/middle/amis.css">
-		<link rel="stylesheet" type="text/css" media="only screen and (min-device-width: 481px) and (max-device-width: 768px)" href="css/mobile_bis/amis.css">
-		<link rel="stylesheet" type="text/css" media="only screen and (max-device-width: 480px) and (-webkit-min-device-pixel-ratio: 2)" href="css/mobile/amis.css">
+		<!-- Common Resolution -->
+		<link rel="stylesheet" type="text/css" media="screen and (min-width: 84.7em) and (max-width: 119.231em)" href="css/default/amis.css" />
+		<link rel="stylesheet" type="text/css" media="screen and (min-width: 84.7em) and (max-width: 119.231em)" href="css/default/header_footer.css" />
+		<!-- High Resolution -->
+		<link rel="stylesheet" type="text/css" media="only screen and (min-width: 119.231em)" href="css/vhd/amis.css" />
+		<link rel="stylesheet" type="text/css" media="only screen and (min-width: 119.231em)" href="css/vhd/header_footer.css" />
+		<!-- Low / Tablette Resolution -->
+		<link rel="stylesheet" type="text/css" media="only screen and (min-width: 62.077em) and (max-width: 84.7em)" href="css/middle/amis.css" />
+		<link rel="stylesheet" type="text/css" media="only screen and (min-width: 62.077em) and (max-width: 84.7em)" href="css/middle/header_footer.css" />
+		<!-- Mobile / Tablette Resolution --> 
+		<link rel="stylesheet" type="text/css" media="only screen and (min-width: 37em) and (max-width: 62.077em)" href="css/mobile_high/amis.css" />
+		<link rel="stylesheet" type="text/css" media="only screen and (min-width: 37em) and (max-width: 62.077em)" href="css/mobile_high/header_footer.css" />
+		<!-- iPhone / Mini Tablette Resolution -->
+		<link rel="stylesheet" type="text/css" media="only screen and (min-width: 24.615em) and (max-width: 37em)" href="css/mobile_medium/amis.css" />
+		<link rel="stylesheet" type="text/css" media="only screen and (min-width: 24.615em) and (max-width: 37em)" href="css/mobile_medium/header_footer.css" />
+		<!-- Old Mobile Resolution -->
+		<link rel="stylesheet" type="text/css" media="(max-width: 24.615em)" href="css/mobile_mini/amis.css" />
+		<link rel="stylesheet" type="text/css" media="(max-width: 24.615em)" href="css/mobile_mini/header_footer.css" />
+		
 		<!--[if (lt IE 9)&(!IEMobile)]>
-			<link rel="stylesheet" type="text/css" media="screen and (min-width: 1024px) and (max-width: 1799px)" href="css/default/amis.css" media="all">
-			<link rel="stylesheet" type="text/css" media="only screen and (min-width: 1800px)" href="css/vhd/amis.css" media="all">
+			<link rel="stylesheet" type="text/css" media="screen and (min-width: 84.7em) and (max-width: 119.231em)" href="css/default/amis.css" media="all">
+			<link rel="stylesheet" type="text/css" media="screen and (min-width: 84.7em) and (max-width: 119.231em)" href="css/default/header_footer.css" media="all">
+			<link rel="stylesheet" type="text/css" media="only screen and (min-width: 119.231em)" href="css/vhd/amis.css" media="all">
+			<link rel="stylesheet" type="text/css" media="only screen and (min-width: 119.231em)" href="css/vhd/header_footer.css" media="all">
 		<![endif]-->
 		
 		<link rel="icon" type="image/png" href="icon/favicon.png"/>
@@ -91,7 +107,7 @@
 			<a href="http://adrian.gaudebert.fr/">Adrian Gaudebert</a> - Passionn&eacute; de d&eacute;veloppement web
 		</li>
 		<li>
-			<a href="http://axel.royerb.com/">Axel Royer</a> - D&eacute;veloppeur d'application mobile
+			<a href="http://axel.royerb.com/">Axel Royer</a> - D&eacute;veloppeur web & d'applications mobiles
 		</li>
 	</ul>
 	<h3>Illustration Graphique</h3>
