--- a/fr v2/expériences.html
+++ b/fr v2/expériences.html
@@ -5,19 +5,35 @@
 
 <html lang="fr">
 <head>
-	<meta content="text/html; charset=UTF-8" http-equiv="Content-Type"/>
+		<meta content="text/html; charset=UTF-8" http-equiv="Content-Type"/>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>
 			  Expériences | Emmanuel HALTER
 		</title>
-		<link rel="stylesheet" type="text/css" media="screen and (min-width: 1024px) and (max-width: 1799px)" href="css/default/experiences.css">
-		<link rel="stylesheet" type="text/css" media="screen and (min-width: 1024px) and (max-width: 1799px)" href="css/default/header_footer.css">
-		<link rel="stylesheet" type="text/css" media="only screen and (min-width: 1800px)" href="css/vhd/experiences.css">
-		<link rel="stylesheet" type="text/css" media="only screen and (min-width: 769px) and (max-width: 1024px)" href="css/middle/experiences.css">
-		<link rel="stylesheet" type="text/css" media="only screen and (min-device-width: 481px) and (max-device-width: 768px)" href="css/mobile_bis/experiences.css">
-		<link rel="stylesheet" type="text/css" media="only screen and (max-device-width: 480px) and (-webkit-min-device-pixel-ratio: 2)" href="css/mobile/experiences.css">
+		<!-- Common Resolution -->
+		<link rel="stylesheet" type="text/css" media="screen and (min-width: 84.7em) and (max-width: 119.231em)" href="css/default/experiences.css" />
+		<link rel="stylesheet" type="text/css" media="screen and (min-width: 84.7em) and (max-width: 119.231em)" href="css/default/header_footer.css" />
+		<!-- High Resolution -->
+		<link rel="stylesheet" type="text/css" media="only screen and (min-width: 119.231em)" href="css/vhd/experiences.css" />
+		<link rel="stylesheet" type="text/css" media="only screen and (min-width: 119.231em)" href="css/vhd/header_footer.css" />
+		<!-- Low / Tablette Resolution -->
+		<link rel="stylesheet" type="text/css" media="only screen and (min-width: 62.077em) and (max-width: 84.7em)" href="css/middle/experiences.css" />
+		<link rel="stylesheet" type="text/css" media="only screen and (min-width: 62.077em) and (max-width: 84.7em)" href="css/middle/header_footer.css" />
+		<!-- Mobile / Tablette Resolution --> 
+		<link rel="stylesheet" type="text/css" media="only screen and (min-width: 37em) and (max-width: 62.077em)" href="css/mobile_high/experiences.css" />
+		<link rel="stylesheet" type="text/css" media="only screen and (min-width: 37em) and (max-width: 62.077em)" href="css/mobile_high/header_footer.css" />
+		<!-- iPhone / Mini Tablette Resolution -->
+		<link rel="stylesheet" type="text/css" media="only screen and (min-width: 24.615em) and (max-width: 37em)" href="css/mobile_medium/experiences.css" />
+		<link rel="stylesheet" type="text/css" media="only screen and (min-width: 24.615em) and (max-width: 37em)" href="css/mobile_medium/header_footer.css" />
+		<!-- Old Mobile Resolution -->
+		<link rel="stylesheet" type="text/css" media="(max-width: 24.615em)" href="css/mobile_mini/experiences.css" />
+		<link rel="stylesheet" type="text/css" media="(max-width: 24.615em)" href="css/mobile_mini/header_footer.css" />
+		
 		<!--[if (lt IE 9)&(!IEMobile)]>
-			<link rel="stylesheet" type="text/css" media="screen and (min-width: 1024px) and (max-width: 1799px)" href="css/default/experiences.css" media="all">
-			<link rel="stylesheet" type="text/css" media="only screen and (min-width: 1800px)" href="css/vhd/experiences.css" media="all">
+			<link rel="stylesheet" type="text/css" media="screen and (min-width: 84.7em) and (max-width: 119.231em)" href="css/default/experiences.css" media="all">
+			<link rel="stylesheet" type="text/css" media="screen and (min-width: 84.7em) and (max-width: 119.231em)" href="css/default/header_footer.css" media="all">
+			<link rel="stylesheet" type="text/css" media="only screen and (min-width: 119.231em)" href="css/vhd/experiences.css" media="all">
+			<link rel="stylesheet" type="text/css" media="only screen and (min-width: 119.231em)" href="css/vhd/header_footer.css" media="all">
 		<![endif]-->
 		
 		<link rel="icon" type="image/png" href="icon/favicon.png" />
@@ -83,10 +99,27 @@
 </header>
 <div class="content">
 	<section>
+			<article id="autoweb">
+				<h1>Développeur Web</h1>
+				<h2>Autodidacte</h2>
+				<h3>Avril 2013 - Septembre 2013 (5 mois)</h3>
+				<p><strong>Apprentissage du développement web</strong></p>
+				<ul>
+					<li>Création de mon site internet</li>
+					<li>Capacité à comprendre les problématiques du Responsive Design</li>
+					<li>Echange avec des développeurs de la communauté Mozilla pour améliorer mes compétences</li>
+					<li>Utilisation des Medias Queries et de l'API Google Maps</li>
+					<li>Première approche dans la création d'une application mobile</li>
+				</ul>
+				<p><i>Environnement : HTML5, CSS3, JavaScript, JIRA, Responsive Design, API Google Maps, Notepad++</i></p>
+			</article>
+			<canvas id="autoSkills" name="autoSkills" width="600" height="300">[No canvas support]</canvas>
+	</section>
+	<section>
 			<article>
 				<h1>Analyste Java</h1>
 				<h2>Crédit Agricole PB - Genève</h2>
-				<h3>Mars 2012 - Septembre 2012 (6mois)</h3>
+				<h3>Mars 2012 - Septembre 2012 (6 mois)</h3>
 				<p><strong>Migration d'un Système d'information Bancaire(COBOL à JAVA)</strong></p>
 				<ul>
 					<li>Mise en place du référentiel de l'Internationalisation(i18n)</li>
@@ -105,7 +138,7 @@
 			<article>
 				<h1>Développeur Java/J2E</h1>
 				<h2>Atos WorldLine - Lyon</h2>
-				<h3>Février 2011 - Septembre 2011(7mois)</h3>
+				<h3>Février 2011 - Septembre 2011(7 mois)</h3>
 				<p><strong>Mise en place d'une plateforme de gestion de projet</strong></p>
 				<ul>
 					<li>Développement du module de l'intégration continue en JAVA / jQuery</li>
@@ -122,7 +155,7 @@
 			<article>
 				<h1>Développeur Java/J2E</h1>
 				<h2>Atos WorldLine - Lyon</h2>
-				<h3>Février 2011 - Septembre 2011</h3>
+				<h3>Mai 2011 - Septembre 2011 (4 mois)</h3>
 				<p><strong>Mise en place d'une GED</strong></p>
 				<ul>
 					<li>Développement du module des statistiques avec JAVA / SQL</li>
@@ -174,7 +207,6 @@
 		<script src="js/RGraph/libraries/RGraph.common.resizing.js"></script>  <!-- Just needed for resizing -->
 		<script src="js/RGraph/libraries/RGraph.common.tooltips.js"></script>  <!-- Just needed for tooltips -->
 		<script src="js/RGraph/libraries/RGraph.common.zoom.js"></script>   
-		<script src="js/RGraph/libraries/RGraph.radar.js"></script>
-		<script src="js/RGraph/libraries/RGraph.hbar.js"></script> 		
+		<script src="js/RGraph/libraries/RGraph.radar.js"></script>		
 </body>
 </html>
