--- a/fr v2/index.html
+++ b/fr v2/index.html
@@ -10,16 +10,30 @@
 		<title>
 			  Accueil | Emmanuel HALTER
 		</title>
+		<!-- Common Resolution -->
 		<link rel="stylesheet" type="text/css" media="screen and (min-width: 84.7em) and (max-width: 119.231em)" href="css/default/accueil.css" />
 		<link rel="stylesheet" type="text/css" media="screen and (min-width: 84.7em) and (max-width: 119.231em)" href="css/default/header_footer.css" />
+		<!-- High Resolution -->
 		<link rel="stylesheet" type="text/css" media="only screen and (min-width: 119.231em)" href="css/vhd/accueil.css" />
-		<link rel="stylesheet" type="text/css" media="only screen and (min-width: 59.077em) and (max-width: 84.7em)" href="css/middle/accueil.css" />
-		<link rel="stylesheet" type="text/css" media="only screen and (min-width: 37em) and (max-width: 59.077em)" href="css/mobile_high/accueil.css" />
+		<link rel="stylesheet" type="text/css" media="only screen and (min-width: 119.231em)" href="css/vhd/header_footer.css" />
+		<!-- Low / Tablette Resolution -->
+		<link rel="stylesheet" type="text/css" media="only screen and (min-width: 62.077em) and (max-width: 84.7em)" href="css/middle/accueil.css" />
+		<link rel="stylesheet" type="text/css" media="only screen and (min-width: 62.077em) and (max-width: 84.7em)" href="css/middle/header_footer.css" />
+		<!-- Mobile / Tablette Resolution --> 
+		<link rel="stylesheet" type="text/css" media="only screen and (min-width: 37em) and (max-width: 62.077em)" href="css/mobile_high/accueil.css" />
+		<link rel="stylesheet" type="text/css" media="only screen and (min-width: 37em) and (max-width: 62.077em)" href="css/mobile_high/header_footer.css" />
+		<!-- iPhone / Mini Tablette Resolution -->
 		<link rel="stylesheet" type="text/css" media="only screen and (min-width: 24.615em) and (max-width: 37em)" href="css/mobile_medium/accueil.css" />
+		<link rel="stylesheet" type="text/css" media="only screen and (min-width: 24.615em) and (max-width: 37em)" href="css/mobile_medium/header_footer.css" />
+		<!-- Old Mobile Resolution -->
 		<link rel="stylesheet" type="text/css" media="(max-width: 24.615em)" href="css/mobile_mini/accueil.css" />
+		<link rel="stylesheet" type="text/css" media="(max-width: 24.615em)" href="css/mobile_mini/header_footer.css" />
+		
 		<!--[if (lt IE 9)&(!IEMobile)]>
-			<link rel="stylesheet" type="text/css" media="screen and (min-width: 1024px) and (max-width: 1799px)" href="css/default/accueil_bis.css" media="all">
-			<link rel="stylesheet" type="text/css" media="only screen and (min-width: 1800px)" href="css/vhd/accueil_bis.css" media="all">
+			<link rel="stylesheet" type="text/css" media="screen and (min-width: 84.7em) and (max-width: 119.231em)" href="css/default/accueil.css" media="all">
+			<link rel="stylesheet" type="text/css" media="screen and (min-width: 84.7em) and (max-width: 119.231em)" href="css/default/header_footer.css" media="all">
+			<link rel="stylesheet" type="text/css" media="only screen and (min-width: 119.231em)" href="css/vhd/accueil.css" media="all">
+			<link rel="stylesheet" type="text/css" media="only screen and (min-width: 119.231em)" href="css/vhd/header_footer.css" media="all">
 		<![endif]-->
 		
 		<link rel="icon" type="image/png" href="icon/favicon.png" />
@@ -111,6 +125,7 @@
 <footer>
 		<section name="network">
 			<h1>Restons connect&eacute;s</h1>
+			<div name="network">
 				<a target="_blank" title="LinkedIn" href="http://www.linkedin.com/pub/emmanuel-halter/34/a43/511">
 					<span id="connect-linkedin" class="sbconnecticon"></span>
 				</a>
@@ -120,6 +135,7 @@
 				<a target="_blank" title="Skype" href="skype:mhayoe?call">
 					<span id="connect-skype" class="sbconnecticon"></span>
 				</a>
+			</div>
 		</section>	
 		<section name="about">
 			<h1>A propos</h1>
